site/resources/css/project.less
@import 'base.less?hash=346927452';

#projectInfoContainer {
    margin: 50px;
    transition: all 0.8s;

    &.visible {
        opacity: 1;
        pointer-events: all;
    }

    a#back {
        @media (prefers-color-scheme: dark) {
            color: rgba(255, 255, 255, 0.5);
        }

        display: inline-block;
        margin-bottom: 0px;
        color: rgba(0, 0, 0, 0.5);
        text-decoration: none;
        transition: color 0.2s;
        cursor: pointer;

        &:hover {
            @media (prefers-color-scheme: dark) {
                color: rgba(255, 255, 255, 0.8);
            }
    
            color: rgba(0, 0, 0, 0.8);
            text-decoration: underline;
        }
    }

    h1 {
        @media (prefers-color-scheme: dark) {
            color: @white;
        }

        color: @black;
        font-weight: bold;
        margin-top: 30px;
        margin-bottom: 15px;
    }

    #descriptions {
        display: block;

        #shortDescription {
            @media (prefers-color-scheme: dark) {
                color: @white;
            }

            color: @black;
            font-size: @font-size-medium;
            line-height: @font-size-medium * 1.5;
            display: block;
            margin-bottom: 20px;
        }

        #longDescription {
            @media (prefers-color-scheme: dark) {
                color: rgba(255, 255, 255, 0.75);
            }

            @media @mobile {          
                @media (prefers-color-scheme: dark) {
                    color: rgba(255, 255, 255, 0.5);
                }
            }

            color: rgba(0, 0, 0, 0.6);
            font-size: @font-size-medium;
            line-height: @font-size-medium * 1.5;
            max-width: 500px;
            padding-bottom: 5px;

            .customFormatting {
                &.big-emoji-block {
                    @media (prefers-color-scheme: dark) {
                        color: @white;
                    }

                    font-size: 20px;
                    display: block;
                    margin-bottom: 10px;
                    color: @black;
                }

                &.emoji {
                    @media (prefers-color-scheme: dark) {
                        color: @white;
                    }
                    
                    font-size: @font-size-medium;
                    margin-right: 2px;
                    color: @black;
                }

                &.code {
                    @media (prefers-color-scheme: dark) {
                        background: rgba(255, 255, 255, 0.25);
                    }

                    @media @mobile {
                        @media (prefers-color-scheme: dark) {
                            background: rgba(255, 255, 255, 0.15);
                        }
                    }
                    
                    background: rgba(0, 0, 0, 0.08);
                    padding: 3px 6px;
                    border-radius: 4px;
                    font-family: Monaco;
                    font-size: 13px;
                    margin: 0 2px;
                    white-space: nowrap;
                }
            }

            a {
                @media (prefers-color-scheme: dark) {
                    color: rgba(255, 255, 255, 0.75);
                }

                @media @mobile {          
                    @media (prefers-color-scheme: dark) {
                        color: rgba(255, 255, 255, 0.5);
                    }
                }

                transition: all 0.2s;
                color: rgba(0, 0, 0, 0.6);

                &:hover {
                    @media (prefers-color-scheme: dark) {
                        color: rgba(255, 255, 255, 0.9);
                    }
                    
                    color: rgba(0, 0, 0, 0.9);
                }
            }
        }
    }

    #credits {
        @media (prefers-color-scheme: dark) {
            color: rgba(255, 255, 255, 0.6);
        }

        display: block;
        margin-top: 20px;
        color: rgba(0, 0, 0, 0.6);
        font-size: @font-size-small;
        line-height: 20px;

        .credit {
            @media (prefers-color-scheme: dark) {
                color: rgba(255, 255, 255, 0.6);
            }

            color: rgba(0, 0, 0, 0.6);
            text-decoration: none;
            transition: all 0.2s;
            margin-right: 10px;
        }

        a.credit:hover {
            @media (prefers-color-scheme: dark) {
                color: rgba(255, 255, 255, 0.9);
            }

            color: rgba(0, 0, 0, 0.9);
            text-decoration: underline;
        }
    }

    #tags {
        display: block;
        margin-top: 20px;

        .tag {
            @media (prefers-color-scheme: dark) {
                color: rgba(255, 255, 255, 0.5);
            }

            @media @mobile {          
                @media (prefers-color-scheme: dark) {
                    color: rgba(255, 255, 255, 0.4);
                }
            }

            font-size: @font-size-medium;
            line-height: @font-size-medium * 1.5;
            color: rgba(0, 0, 0, 0.3);
            text-decoration: none;
            transition: all 0.2s;
            margin-right: 10px;
            white-space: nowrap;

            &:hover {
                @media (prefers-color-scheme: dark) {
                    color: rgba(255, 255, 255, 0.5);
                }

                color: rgba(0, 0, 0, 0.6);
                text-decoration: underline;
            }
        }
    }

    #links {
        display: block;
        margin-top: 30px;

        .link,
        .link:focus {
            @media (prefers-color-scheme: dark) {
                background: rgba(255, 255, 255, 0.15);
                color: rgba(255, 255, 255, 1);
            }

            font-size: @font-size-medium;
            font-weight: bold;
            background: rgba(0, 0, 0, 0.06);
            color: rgba(0, 0, 0, 0.8);
            border-radius: 8px;
            padding: 12px 16px;
            outline: none;
            transition: all 0.2s;
            text-decoration: none;
            margin-right: 15px;
            margin-bottom: 15px;
            display: inline-block;

            &:hover  {
                @media (prefers-color-scheme: dark) {
                    background: rgba(255, 255, 255, 0.25);
                }

                background: rgba(0, 0, 0, 0.1);
            }
            
            &:active  {
                @media (prefers-color-scheme: dark) {
                    background: rgba(255, 255, 255, 0.2);
                }

                background: rgba(0, 0, 0, 0.15);
                transform: scale(0.95);
            }

            .icon {
                margin-right: 10px;
                width: 22px;
                height: 22px;
                display: inline-block;
                vertical-align: 1px;
                
                .material-icons {
                    font-size: 22px;
                    vertical-align: middle;
                    width: 24px;
                    height: 24px;
                }
            }

            .label {
                display: inline-block;
                margin-right: 4px;
            }
        }
    }

    #screenshots {
        margin-top: 50px;

        img, video, audio {
            vertical-align: top;
            margin-right: 50px;
            margin-bottom: 50px;
            outline: none;

            &::selection {
                background: transparent;
            }

            &.retina {
                zoom: 50%;
            }

            &.hasMacDesktopShadow {
                margin-left: -108px;
                margin-top: -70px;
            }
        }

        audio {
            min-width: 300px;
            width: 50%;
        }
    }
}

@media @mobile {
    #projectInfoContainer {
		margin: 30px;
        width: calc(~'100% - 60px');

        a#back {
            padding: 10px 15px;
            margin: -10px -15px;
            border-radius: 8px;
            display: inline-block;
            transition: none;

            &:hover {
                text-decoration: none;
            }

            &:active {
                text-decoration: underline;
            }
        }

        h1 {
            @media (prefers-color-scheme: dark) {
                color: @white;
            }

            color: @black;
            margin-top: 50px;
            margin-bottom: 20px;
        }

        #descriptions {
            #shortDescription {
                font-size: @font-size-medium;
                line-height: @font-size-medium * 1.5;
            }

            #longDescription {
                font-size: @font-size-medium;
                line-height: @font-size-medium * 1.5;

                .customFormatting {
                    &.emoji {
                        @media (prefers-color-scheme: dark) {
                            color: @white;;
                        }

                        font-size: @font-size-medium;
                        margin-right: 5px;
                        color: @black;
                    }
                }
            }
        }

        #links {
            .link {
                width: calc(100% - 32px);
                text-align: center;

                &:hover {
                    @media (prefers-color-scheme: dark) {
                        background: rgba(255, 255, 255, 0.15);
                        color: rgba(255, 255, 255, 1);
                    }
        
                    background: rgba(0, 0, 0, 0.06);
                    color: rgba(0, 0, 0, 0.8);
                }
                
                &:active  {
                    @media (prefers-color-scheme: dark) {
                        background: rgba(255, 255, 255, 0.2);
                    }
    
                    background: rgba(0, 0, 0, 0.1);
                }
            }
        }
        
        #screenshots {
            img, video, audio {
                width: 100%;
            }
        }
    }
}

@media @desktop {
    #projectInfoContainer {
        #descriptions {
            max-width: 600px;
        }

        #screenshots {
            img, video {
                max-width: 100%;
            }
        }
    }
}

